--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -228,11 +228,43 @@
                   
                 </div>
 
+                <!-- Volunteer Resources Guide -->
+                <div class="card">
+                  <div class="card-icon">
+                    <i class="fa-solid fa-book-open"></i>
+                  </div>
+                  <h3>Volunteer Resources Guide</h3>
+                  <p>Everything you need to support our hackathons and community events in one place.</p>
+
+                  <ul style="margin-left:18px;margin-top:4px">
+                    <li>Onboarding steps for new volunteers.</li>
+                    <li>Roles & expectations for Mentors, Judges, Speakers, and Operations teams.</li>
+                    <li>Check-in procedures, communication channels, and event-day workflows.</li>
+                    <!-- <li>Policies, Code of Conduct, and FAQ.</li> -->
+                    <br>
+                  </ul>
+
+                  <!-- TODO: Replace with your live Volunteer Resources Guide URL -->
+                  <a class="card-button"
+                    href="https://docs.google.com/document/d/1Nkz4_azksFo57v1IcF9ReBst9o6vLQHx7BcNPXXX8RY/edit?usp=sharing"
+                    target="_blank" rel="noopener">
+                    Open Volunteer Resources Guide
+                  </a>
+
+                  <div class="small-note">
+                    <ul style="margin-left:18px;margin-top:6px">
+                      <li>Recommended for all new and returning volunteers before each event.</li>
+                      <li>Updated regularly with the latest instructions, templates, and schedules.</li>
+                    </ul>
+                  </div>
+                </div>
 
               <!-- Form No. 0 -->
             <div class="card">
               <div class="card-icon">📬</div>
-              <h3>Form No. 0 — Global Volunteer Mailing List</h3>
+                <h3>Form No. 0</h3>
+              <p class="meta"><strong>Global Volunteer Mailing List</strong></p>
+
               <p>
                 Sign up to receive email updates when new volunteer opportunities open for 
                 <strong>hackathons, technical workshops, fellowship or internship mentorship programs,</strong> 
@@ -250,64 +282,69 @@
                 <strong>Note:</strong> This is an <strong>interest-only mailing list</strong>.
                 Opportunities are shared <strong>monthly or as needed</strong> depending on event schedules. 
                 Completing this form <strong>does not guarantee</strong> a volunteer or mentorship role.
-                <!-- Only a <strong>successful Form No. 2 registration and acceptance</strong> for each event,
-                after completing all requirements, <strong>guarantees an official volunteer role.</strong>
-                You may update your responses on this form at any time with your most recent information;
-                however, <strong>information used for Devpost, certificates, and official records will be taken from
-                the event-specific Form No. 2 submissions.</strong> -->
+
               </div>
+              <br>
+                <p>Read "Volunteer Resources Guide" for logistics, schedule, and expectations.</p>
             </div>
 
 
-      <!-- Form No. 1 -->
-      <div class="card">
-        <div class="card-icon">🎤</div>
-        <h3>Form No. 1 — Speakers & Mentors (Hack University Fellowship / Internship Program)</h3>
-        <p>
-          Apply to become a <strong>speaker or mentor</strong> for the 
-          <strong>Hack University Fellowship & Internship Program</strong>. 
-          Share your expertise through talks, panels, or mentorship sessions that inspire and guide students in their professional and technical growth.  
-          Submissions are reviewed on a rolling basis.
-        </p>
-        <a
-          class="card-button"
-          href="https://codecrunchvolunteerform-no1.vercel.app/"
-          target="_blank"
-          rel="noopener"
-        >
-          Open Form No. 1
-        </a>
-        <div class="small-note">
-          <strong>Note:</strong> This form is updated regularly based on each cohort’s focus areas and mentorship availability.  
-          Completing this form <strong>does not guarantee</strong> a speaking or mentorship slot.  
-          Only a <strong>successful Form No. 2 registration and acceptance</strong> after fulfilling all program requirements 
-          <strong>guarantees an official speaker or mentor role.</strong>
-        </div>
-      </div>
+ 
+
+              <!-- Form No. 1 — Industry Leaders: Speakers & Mentors -->
+              <div class="card">
+                <div class="card-icon">🎤</div>
+                <h3>Form No. 1</h3>
+                <p class="meta"><strong>Speakers & Mentors</strong></p>
+                <p>
+                  Join our ecosystem as a volunteer mentor or guest speaker for upcoming 
+                  <strong>hackathons, semester events, and the Hack University Fellowship & Internship Program</strong> 
+                  if you are interested in helping students grow both technically and professionally.
+                </p>
+
+                <p><strong>Who should use this form?</strong></p>
+                <ul style="margin-left:18px;margin-top:4px">
+                  <li><strong>Technical Mentor:</strong> Support teams with software, AI, cloud, data, cybersecurity, or product engineering challenges.</li>
+                  <li><strong>Non-Technical Mentor:</strong> Guide students in product strategy, UX, business, social impact, pitch decks, and career navigation.</li>
+                  <li><strong>Technical Speaker:</strong> Deliver talks or workshops on tools, stacks, case studies, or technical best practices.</li>
+                  <li><strong>Non-Technical Speaker:</strong> Share your journey, leadership insights, entrepreneurship experiences, or industry perspectives.</li>
+                </ul>
+
+                <br>
+
+                <a class="card-button"
+                  href="https://codecrunchvolunteerform-no1.vercel.app/"
+                  target="_blank" rel="noopener">
+                  Open Form No. 1
+                </a>
+
+                <div class="small-note" style="margin-top:10px">
+                  <ul style="margin-left:18px;margin-top:6px">
+                    <li><strong>Note:</strong> You must complete this form for each event where you’d like to be considered as a speaker or mentor. This form includes upcoming events and is updated monthly — approximately one week after the most recent event concludes.</li>
+                    <li>This form is updated regularly based on each cohort’s focus areas and mentorship needs.</li>
+                    <li>After completing this form, please reach out to us on <strong>LinkedIn</strong> to review your application — this is our fastest communication channel.</li>
+                    <li>Completing this form <strong>does not guarantee</strong> a speaking or mentorship slot. Volunteers will receive a response via DM on LinkedIn after they send us a direct message following submission.</li>
+                    <li>We host <strong>one hackathon each month</strong>. A new registration form is added approximately 1 week after the current event ends.</li>
+                    <li>Please select the specific event(s) and role(s) — Mentor or Speaker — that you wish to support as a volunteer.</li>
+                    <li>This form is intended for external volunteers, industry partners, and community leaders interested in structured engagement opportunities.</li>
+                    <li>Read the <strong>Volunteer Resources Guide</strong> for logistics, schedules, and expectations.</li>
+                    <li>You can check your status anytime by logging in to the <strong>Volunteer Responses Database</strong> on our volunteer website.</li>
+                    <li>Ideal for professionals, alumni, founders, engineers, and community leaders supporting FIU and global students.</li>
+                  </ul>
+                </div>
+              </div>
 
 
-
-      <!-- Form No. 1 -->
-      <!-- <div class="card">
-        <div class="card-icon">🎓</div>
-        <h3>Form No. 1 — Mentors & Workshop Hosts</h3>
-        <p>Apply to mentor and/or host a technical or non-technical workshop. We review rolling submissions.</p>
-        <a class="card-button" href="https://codecrunchvolunteerform-no1.vercel.app/" target="_blank" rel="noopener">
-          Open Form No. 1
-        </a>
-        <div class="small-note">
-          <strong>Note:</strong> This form is updated monthly based on each event’s needs and seat availability.
-          Submitting the form <strong>does not guarantee</strong> a volunteer opportunity. If there is an opening that matches your profile,
-          <strong>you will be contacted by email</strong> with next steps.
-        </div>
-      </div> -->
 
       <!-- Donations & Event Registration -->
           <div class="card">
             <div class="card-icon"><i class="fa-solid fa-file-lines"></i></div>
-            <h3>Form No. 2 — Volunteer Donations & Event Registration</h3>
+                <h3>Form No. 2</h3>
+              <p class="meta"><strong>Volunteer Donations & Event Registration</strong></p>
+
             <p>Support the monthly hackathon and register as a volunteer supporter.</p>
-            <p><strong>Donors with dual roles</strong> (Judge + Mentor)</p>
+             <p><strong>Who should use this form?</strong></p>
+            <p>Volunteers interested in becoming <strong>Donors with dual roles</strong> (Judge + Mentor).</p>
             <!-- TODO: Replace with your live Donations & Registration form URL -->
             <a class="card-button" href="https://docs.google.com/document/d/1wNPG9l8MfihgGItGV_0ApGV_F-W2ABa2by5qCVKuR4s/edit?usp=sharing" target="_blank" rel="noopener">
               Open Forms no2
@@ -324,16 +361,30 @@
               <li>We host <strong>one hackathon each month</strong>. New event registration form will be added 2 days after the current event ends.</li>
               <li>Each event will have a Form No. 2 for donations and registrations.</li>
               <li>Responses for <strong>Donations & Registration form</strong> are valid only if they are completed within the same time frame of each Form No. 2 "Volunteer Donations & Event Registration" form is open.</li>
-              <li>This form is for volunteers interested in becoming <strong>Donors with dual roles</strong> (Judge + Mentor).</li>
+              <li>This form is for external volunteers, industry partners, and community leaders interested in structured engagement.</li>
+               <li>Submissions are reviewed on a rolling basis; after completing this form review the status of your application by login on "Volunteer Responses Database" with the gmail account used for submission.</li>
+            <li>Read the <strong>Volunteer Resources Guide</strong> for logistics, schedules, and expectations.</li>
+            <li>You can check your status anytime by logging in to the <strong>Volunteer Responses Database</strong> on our volunteer website.</li>
+            <li>Ideal for professionals, alumni, founders, engineers, and community leaders supporting FIU and global students.</li>
+
             </div>
           </div>
+
+
+
+ 
+
+
+
 
 
        <!-- Hackathon Evaluation Form no3  -->
       <div class="card">
         <div class="card-icon"><i class="fa-solid fa-file-lines"></i></div>
-        <h3>Form No. 3 — Hackathon Evaluation Form Forms </h3>
-        <p><strong>Donors with dual roles</strong> (Judge + Mentor)</p>
+                        <h3>Form No. 3</h3>
+        <p class="meta"><strong>Hackathon Evaluation Form</strong></p>
+             <p><strong>Who should use this form?</strong></p>
+        <p><strong>Registered volunteers with dual roles</strong> (Judge + Mentor)</p>
         <!-- TODO: Replace with your live Donations & Registration form URL -->
         <a class="card-button" href="https://docs.google.com/document/d/1zJCDtL_W2ak0stmIorQfJJNjeK-qZQfDAigGfHKJw_U/edit?usp=sharing" target="_blank" rel="noopener">
           Open Forms no3 
