--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -277,7 +277,7 @@
     </div>
   </section>
 
-  <section class="section wrap">
+  <!-- <section class="section wrap">
     <div class="card">
       <h1><strong>Tracks &amp; Judging</strong></h1>
       <p class="meta">Criteria: Technical Difficulty · Functionality · Innovation & Creativity · Design & User Experience · Impact & Usefulness · Presentation & Demo</p>
@@ -292,9 +292,48 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
+      <section class="section wrap">
+        <div class="card">
+          <h1><strong>Tracks &amp; Judging</strong></h1>
+          <p class="meta">
+            Criteria: Technical Difficulty · Functionality · Innovation &amp; Creativity · Design &amp; User Experience · Impact &amp; Usefulness · Presentation &amp; Demo
+          </p>
+
+          <div style="margin-top:6px;display:grid;gap:10px">
+            <!-- Track #1 -->
+            <div class="card" style="border-style:dashed">
+              <strong>General Build [Track # 1]</strong>
+              <p>
+                Use software, data, or hardware prototypes to tackle real challenges faced by veterans, military families, or crisis responders —
+                from secure communication and mental health support to logistics, training, or disaster response.
+                Build something practical that could be piloted in the real world within 3–12 months.
+              </p>
+              <p style="font-size:0.88rem;color:#6b7280;margin-top:4px;">
+                Deliverables: README, short demo video, and a live link or screenshots.
+                Read the <a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener" class="arrow-link">Hacker Guide</a> for full detailed instructions and requirements.
+        </p>
+              </p>
+            </div>
+
+            <!-- Track #2 -->
+            <div class="card" style="border-style:dashed">
+              <strong>Tech Unicorn (Pitch) [Track # 2]</strong>
+              <p>
+                Design a no-code startup or venture that delivers a scalable solution for veterans, defense, or public safety —
+                such as a platform, marketplace, training program, or service model.
+                Clearly define the problem, target users, business model, and how you’d realistically launch and grow it.
+              </p>
+              <p style="font-size:0.88rem;color:#6b7280;margin-top:4px;">
+                Deliverables: pitch deck, short video, and a brief executive summary.
+                Read the <a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener" class="arrow-link">Hacker Guide</a> for full detailed instructions and requirements.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
     <section class="section wrap">
