--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -240,10 +240,10 @@
       5. Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      6. Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      6. Attend workshops (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      7. Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      7. Submit your project (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
       8. View the Live Demos Presentation Order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
