--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -255,10 +255,10 @@
       6. Check mentorship channels & schedules on <strong><a href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      7. Attend workshops (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      7. Attend workshops (see <strong><a href="https://docs.google.com/document/d/1yrAd3zaBf_rGtc25wO-fRimh_tTccunpeGAV16JD4aQ/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      8. Submit your project (see <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      8. Submit your project (see <strong><a href="https://docs.google.com/document/d/1yrAd3zaBf_rGtc25wO-fRimh_tTccunpeGAV16JD4aQ/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
       9. View the Live Demos Presentation Order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
