--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -281,7 +281,7 @@
           <li>Devpost (submissions)</li>
         </ul>
          <div class="row" style="margin-top:10px">
-          <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-B-In-person-Agenda-29d7c6d4a1d080e0a0ead01c0ac3527a?source=copy_link" target="_blank" rel="noopener">Agenda</a>
+          <a class="btn alt" href="https://docs.google.com/document/d/1yrAd3zaBf_rGtc25wO-fRimh_tTccunpeGAV16JD4aQ/edit?usp=sharing" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
           <a class="btn alt" href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener">Discord Mentorship channels</a>
           <a class="btn " href="https://hackuniversity-perks.vercel.app/" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
