--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -210,7 +210,7 @@
       Read <strong><a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      5. Read <strong><a href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      5. Read <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
       6. Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
@@ -267,7 +267,7 @@
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn alt" href="https://www.notion.so/305-Hack-Nov-25-Session-A-Online-Synchronous-Agenda-29d7c6d4a1d0801ca102cd26f9fb41cb?source=copy_link" target="_blank" rel="noopener">Agenda</a>
+          <a class="btn alt" href="hhttps://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
           <a class="btn alt" href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener">Discord Mentorship channels</a>
           <a class="btn " href="https://hackuniversity-perks.vercel.app/" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
