--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -150,7 +150,7 @@
         <div class="meta" style="margin:6px 0 8px">
           <span><i class="fa-regular fa-calendar"></i> Saturday</span>
           <span><i class="fa-regular fa-clock"></i> 10:00 AM – 11:00 PM</span>
-          <span><i class="fa-solid fa-building"></i> On-Campus Venue</span>
+          <span><i class="fa-solid fa-building"></i> Everglades MPR (1st Floor)</span>
           <span><i class="fa-solid fa-utensils"></i> Food & Swag</span>
         </div>
         <p>Plan for:</p>
