--- a/z-notes.html
+++ b/z-notes.html
@@ -28,3 +28,64 @@ for students
       "https://github.com/user-attachments/assets/c9298abf-c85b-4ff8-8b92-e7f38ddcc846",
       "https://github.com/user-attachments/assets/c4f4805e-db3b-47a2-9a7f-0b124a66dd85"
     ];
+
+
+
+
+       logo hack university b and w 1x1
+    https://github.com/user-attachments/assets/ecd88daf-1b57-4558-9ffc-e48f57f69473
+
+    logo code crunch b and w 1x1 
+
+    https://github.com/user-attachments/assets/d2bbc54d-c650-4345-8072-3fa858482b0c
+
+    logo color stack at fiu b and w 1x1
+
+    https://github.com/user-attachments/assets/6e2cd638-d9bf-4349-9e6f-8ee72bc02c27
+
+    logo gdg at fiu b and w 1x1
+
+    https://github.com/user-attachments/assets/3c5f5ba2-dc08-48a1-9fd1-1be04cc002d1
+
+
+    logo cahsi at fiu b and w 1x1
+    https://github.com/user-attachments/assets/a76dccce-8bba-4749-9bea-01016f514ccd
+
+
+     logo cahsi at fiu b and w 1x1
+    https://github.com/user-attachments/assets/a76dccce-8bba-4749-9bea-01016f514ccd
+
+   logo raspberry pi code crunch at fiu b and w 1x1
+    https://github.com/user-attachments/assets/0459d11d-52a4-4d9e-bb2b-b86022faf8fa
+
+
+
+         logo fiu honors b and w 1x1
+    https://github.com/user-attachments/assets/da900255-8e06-4660-9e95-10d399bae635
+
+         logo fiu business b and w 1x1
+    https://github.com/user-attachments/assets/db3bc493-56d0-4054-aa1c-42517a82f1e2
+
+
+    logo pino global b and w 1x1
+    https://github.com/user-attachments/assets/7f55c7da-6f6e-43b8-b3c4-5afbb2e74067
+
+    logo fiu cec b and w 1x1
+      https://github.com/user-attachments/assets/b33eb208-69cd-4eb6-9577-b9af1299411a
+
+    logo fiu kfscis b and w 1x1
+    https://github.com/user-attachments/assets/586a7a30-1b06-4e50-a2ed-181955314e0d
+
+      google developer groups  b and w 1x1
+    https://github.com/user-attachments/assets/18f9a1bf-ce33-432d-bcbf-b33f8e3b534e
+
+
+unibee  b and w 1x1
+    https://github.com/user-attachments/assets/6c5acfc7-815e-42a4-9fd6-bdc4a60c7caf
+
+    blackbox.ai  b and w 1x1
+https://github.com/user-attachments/assets/0af9e9c0-3f3f-42f7-8fd9-66a39b5051d2
+
+
+major league of hacking mlh  b and w 1x1
+https://github.com/user-attachments/assets/a40c9aa3-5bb2-4ce5-a998-cc4f88959a26
