--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -126,23 +126,41 @@
 }
 
 .partners-logos{
+  display:grid;
+  grid-template-columns:repeat(5, minmax(0, 1fr)); /* 5 per row */
+  align-items:center;
+  justify-items:center;
+  gap:18px;
+}
+/* works for 3 logos per row */
+/* .partners-logos{
   display:flex;
   flex-wrap:wrap;
   justify-content:center;
   align-items:center;
   gap:18px;
-}
+} */
 
-.partner-logo{
-  height:26px;
-  max-width:120px;
+/* .partner-logo{
+  height: auto;           
+  max-width:160px;       
   object-fit:contain;
   transition:transform .2s ease, box-shadow .2s ease, opacity .2s ease;
   opacity:0.92;
+} */
+
+
+
+.partner-logo{
+  width:100%;
+  max-width:160px;
+  max-height:auto; /* optional cap */
+  height:auto;
 }
 
+
 .partner-logo:hover{
-  transform:translateY(-2px);
+  transform:translateY(-2px) scale(1.06); /* subtle grow on hover */
   box-shadow:0 4px 10px rgba(15,23,42,.12);
   opacity:1;
 }
@@ -445,21 +463,117 @@
     <div class="partners-card">
       <div class="partners-label">Partners</div>
       <div class="partners-logos">
-        <!-- Example logos — replace src + href with your real partners -->
+
+        <!-- Hack University -->
+        <a href="https://hackuniversity.vercel.app" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/ecd88daf-1b57-4558-9ffc-e48f57f69473"
+               alt="Hack University"
+               class="partner-logo">
+        </a>
+
+                <!-- GDG @ FIU -->
+        <a href="https://gdgatfiu.vercel.app" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/3c5f5ba2-dc08-48a1-9fd1-1be04cc002d1"
+               alt="Google Developer Group at FIU"
+               class="partner-logo">
+        </a>
+
+        <!-- Code Crunch -->
+        <a href="https://go.fiu.edu/codecrunch" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/d2bbc54d-c650-4345-8072-3fa858482b0c"
+               alt="Code Crunch"
+               class="partner-logo">
+        </a>
+
+        <!-- ColorStack @ FIU -->
+        <a href="https://www.colorstack.org" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/6e2cd638-d9bf-4349-9e6f-8ee72bc02c27"
+               alt="ColorStack at FIU"
+               class="partner-logo">
+        </a>
+
+        <!-- CAHSI @ FIU -->
+        <a href="https://cahsi.fiu.edu" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/a76dccce-8bba-4749-9bea-01016f514ccd"
+               alt="CAHSI at FIU"
+               class="partner-logo">
+        </a>
+
+        <!-- Raspberry Pi Code Crunch @ FIU -->
+        <a href="https://raspberrypicodecrunch.vercel.app" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/0459d11d-52a4-4d9e-bb2b-b86022faf8fa"
+               alt="Raspberry Pi Code Crunch at FIU"
+               class="partner-logo">
+        </a>
+
+        <!-- FIU Honors College -->
+        <a href="https://honors.fiu.edu" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/da900255-8e06-4660-9e95-10d399bae635"
+               alt="FIU Honors College"
+               class="partner-logo">
+        </a>
+
+        <!-- FIU Business -->
+        <a href="https://business.fiu.edu" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/db3bc493-56d0-4054-aa1c-42517a82f1e2"
+               alt="FIU College of Business"
+               class="partner-logo">
+        </a>
+
+        <!-- Pino Global -->
+        <a href="#" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/7f55c7da-6f6e-43b8-b3c4-5afbb2e74067"
+               alt="Pino Global"
+               class="partner-logo">
+        </a>
+
+        <!-- FIU College of Engineering & Computing -->
+        <a href="https://cec.fiu.edu" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/b33eb208-69cd-4eb6-9577-b9af1299411a"
+               alt="FIU College of Engineering & Computing"
+               class="partner-logo">
+        </a>
+
+        <!-- Knight Foundation School of Computing & Information Sciences (FIU KFSCIS) -->
+        <a href="https://cec.fiu.edu" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/586a7a30-1b06-4e50-a2ed-181955314e0d"
+               alt="Knight Foundation School of Computing & Information Sciences"
+               class="partner-logo">
+        </a>
+
+        <!-- Google Developer Groups -->
+        <!-- <a href="https://developers.google.com/community/gdg" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/18f9a1bf-ce33-432d-bcbf-b33f8e3b534e"
+               alt="Google Developer Groups"
+               class="partner-logo">
+        </a> -->
+
+        <!-- UniBee -->
+        <a href="https://unibee.dev" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/6c5acfc7-815e-42a4-9fd6-bdc4a60c7caf"
+               alt="UniBee"
+               class="partner-logo">
+        </a>
+
+        <!-- Blackbox.ai -->
+        <a href="https://blackbox.ai" target="_blank" rel="noopener">
+          <img src="https://github.com/user-attachments/assets/0af9e9c0-3f3f-42f7-8fd9-66a39b5051d2"
+               alt="Blackbox AI"
+               class="partner-logo">
+        </a>
+
+        <!-- Major League Hacking (MLH) -->
         <a href="https://mlh.io" target="_blank" rel="noopener">
-          <img src="PATH/TO/mlh-logo.png" alt="Major League Hacking" class="partner-logo">
+          <img src="https://github.com/user-attachments/assets/a40c9aa3-5bb2-4ce5-a998-cc4f88959a26"
+               alt="Major League Hacking"
+               class="partner-logo">
         </a>
-        <a href="https://developers.google.com/community/gdg" target="_blank" rel="noopener">
-          <img src="PATH/TO/gdg-logo.png" alt="Google Developer Groups" class="partner-logo">
-        </a>
-        <a href="https://fiu.edu" target="_blank" rel="noopener">
-          <img src="PATH/TO/fiu-logo.png" alt="Florida International University" class="partner-logo">
-        </a>
-        <!-- Add/remove as needed -->
+
       </div>
     </div>
   </div>
 </section>
+
 
 
 
