--- a/HACK-6.1-305HACKNOV-0.html
+++ b/HACK-6.1-305HACKNOV-0.html
@@ -265,21 +265,21 @@
         </a>
 
         <!-- Code Crunch -->
-        <a href="https://go.fiu.edu/codecrunch" target="_blank" rel="noopener">
+        <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener">
           <img src="https://github.com/user-attachments/assets/d2bbc54d-c650-4345-8072-3fa858482b0c"
                alt="Code Crunch"
                class="partner-logo">
         </a>
 
         <!-- ColorStack @ FIU -->
-        <a href="https://www.colorstack.org" target="_blank" rel="noopener">
+        <a href="https://colorstackatfiu.vercel.app" target="_blank" rel="noopener">
           <img src="https://github.com/user-attachments/assets/6e2cd638-d9bf-4349-9e6f-8ee72bc02c27"
                alt="ColorStack at FIU"
                class="partner-logo">
         </a>
 
         <!-- CAHSI @ FIU -->
-        <a href="https://cahsi.fiu.edu" target="_blank" rel="noopener">
+        <a href="https://cahsiatfiu.vercel.app" target="_blank" rel="noopener">
           <img src="https://github.com/user-attachments/assets/a76dccce-8bba-4749-9bea-01016f514ccd"
                alt="CAHSI at FIU"
                class="partner-logo">
@@ -307,7 +307,7 @@
         </a>
 
         <!-- Pino Global -->
-        <a href="#" target="_blank" rel="noopener">
+        <a href="https://business.fiu.edu/faculty-and-research/centers-institutes/pino/" target="_blank" rel="noopener">
           <img src="https://github.com/user-attachments/assets/7f55c7da-6f6e-43b8-b3c4-5afbb2e74067"
                alt="Pino Global"
                class="partner-logo">
