--- a/HACK-6.1-305HACKNOV-2.html
+++ b/HACK-6.1-305HACKNOV-2.html
@@ -88,6 +88,8 @@
   color: #1557b0;
 }
 
+
+/* bullet points  */
   .list {
     list-style-type: disc; /* adds filled circle bullets */
     padding-left: 20px;    /* adds indentation */
