--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -88,6 +88,18 @@
   color: #1557b0;
 }
 
+/* bullet points  */
+  .list {
+    list-style-type: disc; /* adds filled circle bullets */
+    padding-left: 20px;    /* adds indentation */
+  }
+
+  .list2 {
+  list-style-type: decimal; /* default: 1, 2, 3 */
+  padding-left: 20px;
+}
+
+
 
 /* partners css */
 .partners-bar{
@@ -265,60 +277,60 @@
     <div class="grid">
 <div class="card">
    <h1><strong>Registration Steps - Session A</strong></h1>
-  <ol class="list">
+  <ol class="list2">
     <li>
-      1. RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      RSVP on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      2. Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
+      Register on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">OneStopForm <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for tools/perks
     </li>
     <li>
-      3. Register on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
+      Register on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> for submissions
     </li>
     <li>
-      4. Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
+      Join <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Code Crunch Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (check mentorship channels & schedules)
     </li>
     <li>
       Read <strong><a href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener noreferrer" class="arrow-link">Hacker Guide &amp; Toolkit <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      5. Read <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Read <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">Event Agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      6. Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
+      Create your <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
     </li>
     <li>
-      7. Submit final links by <strong>Nov 15 @ due time submission</strong>
+      Submit final links by <strong>Nov 15 @ due time submission</strong>
     </li>
   </ol>
 </div>
 
 <div class="card">
      <h1><strong>Check-in Steps - Session A</strong></h1>
-  <ol class="list">
+  <ol class="list2">
     <li>
-      1. Check-in with your Ticket on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Check-in with your Ticket on <strong><a href="https://gdg.community.dev/e/mnx2w6/" target="_blank" rel="noopener noreferrer" class="arrow-link">Bevy Event Ticket <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      2. Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLScI6FtLI59QtWqzngkwa0ja4IOszrYdFLdPmOYmG-Ltb-dpJA/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="arrow-link">Check-in Form <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      3. Add team members (if any) on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
+      Add team members (if any) on <strong><a href="https://305hacknov2025sa.devpost.com/" target="_blank" rel="noopener noreferrer" class="arrow-link">Devpost <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> (edits allowed before deadline)
     </li>
     <li>
-      4. Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
+      Create a <strong><a href="https://github.com/new" target="_blank" rel="noopener noreferrer" class="arrow-link">PUBLIC GitHub repo <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong> and make your first commit
     </li>
     <li>
-      5. Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
+      Check mentorship channels & schedules on <strong><a href="http://hackuniversity-registration.vercel.app/" target="_blank" rel="noopener noreferrer" class="arrow-link">Discord <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>
     </li>
     <li>
-      6. Attend workshops (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      Attend workshops (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      7. Submit your project (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      Submit your project (see <strong><a href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="arrow-link">agenda <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
     <li>
-      8. View the Live Demos Presentation Order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
+      View the Live Demos Presentation Order (see <strong><a href="https://docs.google.com/spreadsheets/d/12XawEQd-wbwozsYDKwPMr8Uj3yJcgdBinVPxudjWX_w/edit?usp=sharing">List <i class="fa-solid fa-arrow-up-right-from-square"></i></a></strong>)
     </li>
   </ol>
 </div>
