--- a/HACK-6.1-305HACKNOV-1.html
+++ b/HACK-6.1-305HACKNOV-1.html
@@ -351,7 +351,7 @@
           <li>Devpost (submissions)</li>
         </ul>
         <div class="row" style="margin-top:10px">
-          <a class="btn alt" href="hhttps://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener">Agenda</a>
+          <a class="btn alt" href="https://docs.google.com/document/d/15RX5r0ar_Dc3PgdJNg6-AotGINzwYTnrZFiJQTMI2N8/edit?usp=sharing" target="_blank" rel="noopener">Agenda</a>
           <a class="btn" href="https://hackuniversity-hackerguide.vercel.app" target="_blank" rel="noopener">Hacker Guide</a>
           <a class="btn alt" href="https://hackuniversitydiscordverify.vercel.app/" target="_blank" rel="noopener">Discord Mentorship channels</a>
           <a class="btn " href="https://hackuniversity-perks.vercel.app/" target="_blank" rel="noopener">Subscriptions/APIs/Perks</a>
